--- a/docs/recipes/input-output_linear_methods.ipynb
+++ b/docs/recipes/input-output_linear_methods.ipynb
@@ -102,9 +102,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "",
    "language": "python",
-   "name": "python3"
+   "name": ""
   },
   "language_info": {
    "name": "python",
