refactor(examples/*): convert all the examples from .py -> .ipynb

--- a/docs/tutorials/input-output_linear_methods.ipynb
+++ b/docs/tutorials/input-output_linear_methods.ipynb
@@ -12,19 +12,19 @@
     "  y_k = G(z)u_k + H(z)e_k\n",
     "$$\n",
     "\n",
-    "where $ G(z) $ and $ H(z) $ are **transfer function matrices** of polynomials in $ z $, which is the **forward shift operator**.\n",
+    "where $G(z)$ and $H(z)$ are **transfer function matrices** of polynomials in $z$, which is the **forward shift operator**.\n",
     "\n",
     "The underlying generalized model structure is:\n",
+    "\n",
     "$$\n",
     "  A(z)y_k=\\frac{B(z)}{F(z)}u_k+\\frac{C(z)}{D(z)}e_k\n",
     "$$\n",
     "\n",
     "which can be visualized as **block diagram**:\n",
-    "<div align=\"center\">\n",
-    "    <img width=\"50%\" src=\"../img/inoutmodgen.png\" />\n",
-    "</div>\n",
     "\n",
-    "For each structure, the corresponding **orders** of the various blocks have to be set, since a **specific parameter vector** ($ \\Theta $) and a corresponding **regressor matrix** ($ \\phi $, in which the various **regressor vectors** $ \\varphi_k $ are stacked) have to be defined [Ljung, 1999]().`\n",
+    "![in-out-model](../img/inoutmodgen.png)\n",
+    "\n",
+    "For each structure, the corresponding **orders** of the various blocks have to be set, since a **specific parameter vector** ($\\Theta$) and a corresponding **regressor matrix** ($\\phi$, in which the various **regressor vectors** $\\varphi_k$ are stacked) have to be defined [Ljung, 1999]().`\n",
     "\n",
     "Here's a summary of all the available model structures and polynomials used:\n",
     "\n",
@@ -47,17 +47,17 @@
     "  \\varphi_k= [    -y_{k-1} \\: \\dots \\: -y_{k-n_a}\\:   u_{k-1-\\theta} \\: \\dots \\: u_{k-n_b-\\theta} \\: \\epsilon_{k-1} \\: \\dots \\:   \\epsilon_{k-n_c} ]^T\n",
     "$$\n",
     "\n",
-    "where $ \\epsilon_k = y_k - \\hat{y}_k $ is the **prediction error**, being $\\hat{y}_k$ the **output model**, and $\\theta$ is the **time-delay**.\n",
+    "where $\\epsilon_k = y_k - \\hat{y}_k$ is the **prediction error**, being $\\hat{y}_k$ the **output model**, and $\\theta$ is the **time-delay**.\n",
     "\n",
     "Following naming convention for orders is used throughout SIPPY:\n",
     "\n",
-    "* $ n_a $ - orders of $A(z)$: the order of $n_y$ outputs.\n",
-    "* $ n_b $ - orders of $B(z)$: the orders of $n_y \\times n_u$ input-output relations.\n",
+    "* $n_a$ - orders of $A(z)$: the order of $n_y$ outputs.\n",
+    "* $n_b$ - orders of $B(z)$: the orders of $n_y \\times n_u$ input-output relations.\n",
     "      Note that if an input does not influence an output, set that order equal to $0$;\n",
-    "* $ n_c $ - orders of $C(z)$: the order of $n_y$ error models (numerator in $H(z)$).\n",
-    "* $ n_d $ - orders of $D(z)$: the order of $n_y$ error models (denominator in $H(z)$).\n",
-    "* $ n_f $ - orders of $F(z)$: the order of $n_y$ undisturbed output model.\n",
-    "* $ \\theta$: the $n_y \\times n_u$ input-output time-delays."
+    "* $n_c$ - orders of $C(z)$: the order of $n_y$ error models (numerator in $H(z)$).\n",
+    "* $n_d$ - orders of $D(z)$: the order of $n_y$ error models (denominator in $H(z)$).\n",
+    "* $n_f$ - orders of $F(z)$: the order of $n_y$ undisturbed output model.\n",
+    "* $\\theta$: the $n_y \\times n_u$ input-output time-delays."
    ]
   },
   {
@@ -81,11 +81,11 @@
     "\n",
     "| | Output 1 | Output 2 | Output 3 |\n",
     "| :- | :-: | :-: | :-: |\n",
-    "| Input 1 | $g_{11}=\\frac{4 z^3 + 3.3 z^2}{z^5 - 0.3 z^4 - 0.25 z^3 - 0.021 z^2} $ | $g_{21}=\\frac{-85 z^2 - 57.5 z - 27.7}{z^4 - 0.4 z^3} $ | $g_{31}=\\frac{0.2 z^3}{z^4 - 0.1 z^3 - 0.3 z^2}$ |\n",
-    "| Input 2 | $g_{12}=\\frac{10 z^2}{z^5 - 0.3 z^4 - 0.25 z^3 - 0.021 z^2}$ | $g_{22}=\\frac{71 z + 12.3}{z^4 - 0.4 z^3} $ | $g_{32}=\\frac{0.821 z^2 + 0.432 z}{z^4 - 0.1 z^3 - 0.3 z^2}$ |\n",
-    "| Input 3 | $g_{13}=\\frac{7 z^2 + 5.5 z + 2.2}{z^5 - 0.3 z^4 - 0.25 z^3 - 0.021 z^2}$ | $g_{23}=\\frac{-0.1 z^3}{z^4 - 0.4 z^3} $ | $g_{33}=\\frac{0.1 z^3}{z^4 - 0.1 z^3 - 0.3 z^2}$ |\n",
-    "| Input 4 | $g_{14}=\\frac{-0.9 z^3 - 0.11 z^2}{z^5 - 0.3 z^4 - 0.25 z^3 - 0.021 z^2}$ | $g_{24}=\\frac{0.994 z^3}{z^4 - 0.4 z^3} $ | $g_{34}=\\frac{0.891 z + 0.223}{z^4 - 0.1 z^3 - 0.3 z^2}$ |\n",
-    "| Error model | $h_{1}=\\frac{z^5 + 0.85 z^4 + 0.32 z^3}{z^5 - 0.3 z^4 - 0.25 z^3 - 0.021 z^2}$ | $h_{2}=\\frac{z^4 + 0.4 z^3 + 0.05 z^2}{z^4 - 0.4 z^3} $ | $h_{3}=\\frac{z^4 + 0.7 z^3 + 0.485 z^2 + 0.22 z}{z^4 - 0.1 z^3 - 0.3 z^2} $  |"
+    "| Input 1 | $g_{11}=\\frac{4 z^3 + 3.3 z^2}{z^5 - 0.3 z^4 - 0.25 z^3 - 0.021 z^2}$ | $g_{21}=\\frac{-85 z^2 - 57.5 z - 27.7}{z^4 - 0.4 z^3}$ | $g_{31}=\\frac{0.2 z^3}{z^4 - 0.1 z^3 - 0.3 z^2}$ |\n",
+    "| Input 2 | $g_{12}=\\frac{10 z^2}{z^5 - 0.3 z^4 - 0.25 z^3 - 0.021 z^2}$ | $g_{22}=\\frac{71 z + 12.3}{z^4 - 0.4 z^3}$ | $g_{32}=\\frac{0.821 z^2 + 0.432 z}{z^4 - 0.1 z^3 - 0.3 z^2}$ |\n",
+    "| Input 3 | $g_{13}=\\frac{7 z^2 + 5.5 z + 2.2}{z^5 - 0.3 z^4 - 0.25 z^3 - 0.021 z^2}$ | $g_{23}=\\frac{-0.1 z^3}{z^4 - 0.4 z^3}$ | $g_{33}=\\frac{0.1 z^3}{z^4 - 0.1 z^3 - 0.3 z^2}$ |\n",
+    "| Input 4 | $g_{14}=\\frac{-0.9 z^3 - 0.11 z^2}{z^5 - 0.3 z^4 - 0.25 z^3 - 0.021 z^2}$ | $g_{24}=\\frac{0.994 z^3}{z^4 - 0.4 z^3}$ | $g_{34}=\\frac{0.891 z + 0.223}{z^4 - 0.1 z^3 - 0.3 z^2}$ |\n",
+    "| Error model | $h_{1}=\\frac{z^5 + 0.85 z^4 + 0.32 z^3}{z^5 - 0.3 z^4 - 0.25 z^3 - 0.021 z^2}$ | $h_{2}=\\frac{z^4 + 0.4 z^3 + 0.05 z^2}{z^4 - 0.4 z^3}$ | $h_{3}=\\frac{z^4 + 0.7 z^3 + 0.485 z^2 + 0.22 z}{z^4 - 0.1 z^3 - 0.3 z^2}$  |"
    ]
   },
   {
