fix(examples/cst): soft constraints

--- a/docs/examples/cst-mimo.ipynb
+++ b/docs/examples/cst-mimo.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:37.654415Z",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:40.219293Z",
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:40.222346Z",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:40.225182Z",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:40.228218Z",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:40.231260Z",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:40.234074Z",
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:40.237301Z",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:40.244377Z",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:40.250774Z",
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:40.254382Z",
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:40.315808Z",
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:40.319361Z",
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:40.322207Z",
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:40.325140Z",
@@ -490,7 +490,7 @@
     "        {\n",
     "            \"centering\": \"MeanVal\",\n",
     "            \"max_iter\": n_iter,\n",
-    "            \"stab_cons\": True,\n",
+    "            \"stab_cons\": False,\n",
     "        },\n",
     "    ),\n",
     "    \"GEN\": (\n",
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:40.328172Z",
@@ -521,8 +521,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/app/sippy_unipi/io/opt.py:96: UserWarning: Reached maximum number of iterations\n",
-      "  warn(\"Reached maximum number of iterations\")\n"
+      "/app/sippy_unipi/utils/validation.py:58: UserWarning: Consider activating the stability constraint. The maximum pole is 1.0011877396688271  \n",
+      "  warn(\n",
+      "/app/sippy_unipi/utils/validation.py:58: UserWarning: Consider activating the stability constraint. The maximum pole is 1.001187739668363  \n",
+      "  warn(\n"
      ]
     }
    ],
@@ -544,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:52.883162Z",
@@ -569,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:53.135110Z",
@@ -599,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:53.138173Z",
@@ -642,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:53.268369Z",
@@ -688,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:53.353507Z",
@@ -712,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:53.356109Z",
@@ -750,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:53.363273Z",
@@ -786,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:53.368090Z",
@@ -813,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:53.371116Z",
@@ -850,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:53.431219Z",
@@ -874,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:53.434151Z",
@@ -904,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:53.437229Z",
@@ -942,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:53.765588Z",
@@ -978,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:53.899212Z",
