fix(examples): add TransformedTargetRegressor for MIMO examples

--- a/docs/examples/armax-ic.ipynb
+++ b/docs/examples/armax-ic.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-03-20T08:26:10.723014Z",
@@ -99,22 +99,19 @@
    },
    "outputs": [],
    "source": [
-    "scaler = StandardScaler()\n",
-    "model = ARMAX(max_iter=1000)\n",
+    "model = ARMAX()\n",
     "\n",
     "param_grid = {\n",
-    "    \"model__na\": list(range(1, 6)),\n",
-    "    \"model__nb\": list(range(1, 6)),\n",
-    "    \"model__nc\": list(range(1, 6)),\n",
-    "    \"model__theta\": list(range(1, 14)),\n",
+    "    \"na\": list(range(1, 4)),\n",
+    "    \"theta\": list(range(1, 11, 2)),\n",
     "}\n",
     "\n",
     "model_search = GridSearchCV(\n",
-    "    Pipeline(steps=[(\"scaler\", scaler), (\"model\", model)]),\n",
+    "    model,\n",
     "    param_grid,\n",
     "    scoring=bic_scorer,\n",
     ")\n",
-    "model_search.fit(Y.reshape(-1, 1), U.reshape(-1, 1))\n",
+    "model_search.fit(U.reshape(-1, 1), Y.reshape(-1, 1))\n",
     "model_fitted = model_search.best_estimator_"
    ]
   },
@@ -127,13 +124,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y_pred_g = model_fitted.predict(Usim.reshape(-1, 1))\n",
-    "Y_pred_h = model_fitted.predict(Uerr.reshape(-1, 1), noise=True)\n",
-    "Y_pred = Y_pred_g + Y_pred_h"
+    "Y_pred = model_fitted.predict(U.reshape(-1, 1))"
    ]
   },
   {
@@ -171,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,12 +188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "Y_pred_g_val = model_fitted.predict(Usimval.reshape(-1, 1))\n",
-    "Y_pred_h_val = model_fitted.predict(Uerrval.reshape(-1, 1), noise=True)\n",
+    "Y_pred_h_val = model_fitted.predict(Uerrval.reshape(-1, 1))\n",
     "Y_pred_val = Y_pred_g_val + Y_pred_h_val"
    ]
   },
@@ -244,7 +239,7 @@
     "for tf in [\"G_\", \"H_\"]:\n",
     "    syss_tfs = [\n",
     "        locals()[f\"{tf.lower()}sys\"],\n",
-    "        getattr(model_fitted.steps[-1][1], tf),\n",
+    "        getattr(model_fitted, tf),\n",
     "    ]\n",
     "    mags, fis, oms = zip(*[frequency_response(sys, W_V) for sys in syss_tfs])\n",
     "\n",
