--- a/docs/examples/sklearn-api.ipynb
+++ b/docs/examples/sklearn-api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,13 +59,13 @@
    "source": [
     "# Input sequence\n",
     "U = np.zeros((1, npts))\n",
-    "[U[0], _, _] = gen_gbn_seq(npts, 0.05)\n",
+    "U[0] = gen_gbn_seq(npts, 0.05)\n",
     "\n",
     "# Output\n",
     "yout = sys_true.predict(U.T)\n",
     "\n",
     "# Measurement noise\n",
-    "noise = white_noise(npts, [0.15]).T\n",
+    "noise = white_noise(0.15, (npts,)).T\n",
     "\n",
     "# Output with noise\n",
     "y_tot = yout + noise\n",
