fix(examples): wrong method use and unused imports

--- a/docs/examples/armax-ic.ipynb
+++ b/docs/examples/armax-ic.ipynb
@@ -5,23 +5,21 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:09.112308Z",
-     "iopub.status.busy": "2025-03-20T08:26:09.112185Z",
-     "iopub.status.idle": "2025-03-20T08:26:10.541293Z",
-     "shell.execute_reply": "2025-03-20T08:26:10.540981Z"
+     "iopub.execute_input": "2025-06-11T10:56:34.351787Z",
+     "iopub.status.busy": "2025-06-11T10:56:34.351688Z",
+     "iopub.status.idle": "2025-06-11T10:56:34.934641Z",
+     "shell.execute_reply": "2025-06-11T10:56:34.934353Z"
     }
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from control import frequency_response\n",
-    "from sklearn.pipeline import Pipeline\n",
     "\n",
     "from sippy_unipi.datasets import load_sample_siso\n",
     "from sippy_unipi.io import ARMAX\n",
     "from sippy_unipi.model_selection import GridSearchCV, bic_scorer\n",
     "from sippy_unipi.plot import plot_bode, plot_response, plot_responses\n",
-    "from sippy_unipi.preprocessing import StandardScaler\n",
     "\n",
     "seed = 0\n",
     "np.random.seed(seed)\n",
@@ -42,10 +40,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:10.542402Z",
-     "iopub.status.busy": "2025-03-20T08:26:10.542286Z",
-     "iopub.status.idle": "2025-03-20T08:26:10.553236Z",
-     "shell.execute_reply": "2025-03-20T08:26:10.553021Z"
+     "iopub.execute_input": "2025-06-11T10:56:34.935877Z",
+     "iopub.status.busy": "2025-06-11T10:56:34.935767Z",
+     "iopub.status.idle": "2025-06-11T10:56:34.946855Z",
+     "shell.execute_reply": "2025-06-11T10:56:34.946604Z"
     }
    },
    "outputs": [],
@@ -62,10 +60,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:10.554045Z",
-     "iopub.status.busy": "2025-03-20T08:26:10.553974Z",
-     "iopub.status.idle": "2025-03-20T08:26:10.710108Z",
-     "shell.execute_reply": "2025-03-20T08:26:10.709858Z"
+     "iopub.execute_input": "2025-06-11T10:56:34.947872Z",
+     "iopub.status.busy": "2025-06-11T10:56:34.947802Z",
+     "iopub.status.idle": "2025-06-11T10:56:35.132816Z",
+     "shell.execute_reply": "2025-06-11T10:56:35.132622Z"
     }
    },
    "outputs": [],
@@ -87,13 +85,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:10.723014Z",
-     "iopub.status.busy": "2025-03-20T08:26:10.722927Z",
-     "iopub.status.idle": "2025-03-20T08:26:21.250327Z",
-     "shell.execute_reply": "2025-03-20T08:26:21.249523Z"
+     "iopub.execute_input": "2025-06-11T10:56:35.146913Z",
+     "iopub.status.busy": "2025-06-11T10:56:35.146817Z",
+     "iopub.status.idle": "2025-06-11T10:56:37.251652Z",
+     "shell.execute_reply": "2025-06-11T10:56:37.251362Z"
     },
     "scrolled": true
    },
@@ -124,8 +122,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-11T10:56:37.252843Z",
+     "iopub.status.busy": "2025-06-11T10:56:37.252772Z",
+     "iopub.status.idle": "2025-06-11T10:56:37.263840Z",
+     "shell.execute_reply": "2025-06-11T10:56:37.263601Z"
+    }
+   },
    "outputs": [],
    "source": [
     "Y_pred = model_fitted.predict(U.reshape(-1, 1))"
@@ -136,10 +141,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:21.266314Z",
-     "iopub.status.busy": "2025-03-20T08:26:21.266141Z",
-     "iopub.status.idle": "2025-03-20T08:26:21.379572Z",
-     "shell.execute_reply": "2025-03-20T08:26:21.379295Z"
+     "iopub.execute_input": "2025-06-11T10:56:37.264870Z",
+     "iopub.status.busy": "2025-06-11T10:56:37.264796Z",
+     "iopub.status.idle": "2025-06-11T10:56:37.328713Z",
+     "shell.execute_reply": "2025-06-11T10:56:37.328530Z"
     }
    },
    "outputs": [],
@@ -166,8 +171,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-11T10:56:37.330147Z",
+     "iopub.status.busy": "2025-06-11T10:56:37.330050Z",
+     "iopub.status.idle": "2025-06-11T10:56:37.342828Z",
+     "shell.execute_reply": "2025-06-11T10:56:37.342596Z"
+    }
+   },
    "outputs": [],
    "source": [
     "n_samples = 401\n",
@@ -188,8 +200,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-11T10:56:37.343832Z",
+     "iopub.status.busy": "2025-06-11T10:56:37.343770Z",
+     "iopub.status.idle": "2025-06-11T10:56:37.353675Z",
+     "shell.execute_reply": "2025-06-11T10:56:37.353498Z"
+    }
+   },
    "outputs": [],
    "source": [
     "Y_pred_g_val = model_fitted.predict(Usimval.reshape(-1, 1))\n",
@@ -202,10 +221,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:21.398433Z",
-     "iopub.status.busy": "2025-03-20T08:26:21.398365Z",
-     "iopub.status.idle": "2025-03-20T08:26:21.470551Z",
-     "shell.execute_reply": "2025-03-20T08:26:21.470276Z"
+     "iopub.execute_input": "2025-06-11T10:56:37.354599Z",
+     "iopub.status.busy": "2025-06-11T10:56:37.354542Z",
+     "iopub.status.idle": "2025-06-11T10:56:37.421133Z",
+     "shell.execute_reply": "2025-06-11T10:56:37.420941Z"
     }
    },
    "outputs": [],
@@ -227,10 +246,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:21.471396Z",
-     "iopub.status.busy": "2025-03-20T08:26:21.471321Z",
-     "iopub.status.idle": "2025-03-20T08:26:22.436414Z",
-     "shell.execute_reply": "2025-03-20T08:26:22.436178Z"
+     "iopub.execute_input": "2025-06-11T10:56:37.422096Z",
+     "iopub.status.busy": "2025-06-11T10:56:37.422011Z",
+     "iopub.status.idle": "2025-06-11T10:56:37.850504Z",
+     "shell.execute_reply": "2025-06-11T10:56:37.850259Z"
     }
    },
    "outputs": [],
