--- a/docs/examples/opt.ipynb
+++ b/docs/examples/opt.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-05-29T14:30:28.523697Z",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-05-29T14:30:29.543282Z",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-05-29T14:30:29.554773Z",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-05-29T14:30:32.107296Z",
@@ -298,7 +298,7 @@
     "for tf in [\"G_\", \"H_\"]:\n",
     "    syss_tfs = [\n",
     "        locals()[f\"{tf.lower()}sys\"],\n",
-    "        *[getattr(sys.steps[-1][1].regressor, tf) for sys in fitted_models],\n",
+    "        *[getattr(sys.steps[-1][1].regressor_, tf) for sys in fitted_models],\n",
     "    ]\n",
     "    mags, fis, oms = zip(*[frequency_response(sys, W_V) for sys in syss_tfs])\n",
     "\n",
