--- a/docs/examples/rls.ipynb
+++ b/docs/examples/rls.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-05-29T14:30:34.711005Z",
-     "iopub.status.busy": "2025-05-29T14:30:34.710906Z",
-     "iopub.status.idle": "2025-05-29T14:30:35.411465Z",
-     "shell.execute_reply": "2025-05-29T14:30:35.411202Z"
+     "iopub.execute_input": "2025-06-11T10:56:55.797743Z",
+     "iopub.status.busy": "2025-06-11T10:56:55.797495Z",
+     "iopub.status.idle": "2025-06-11T10:56:56.453308Z",
+     "shell.execute_reply": "2025-06-11T10:56:56.453084Z"
     }
    },
    "outputs": [],
@@ -46,10 +46,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-05-29T14:30:35.412794Z",
-     "iopub.status.busy": "2025-05-29T14:30:35.412660Z",
-     "iopub.status.idle": "2025-05-29T14:30:35.638196Z",
-     "shell.execute_reply": "2025-05-29T14:30:35.637978Z"
+     "iopub.execute_input": "2025-06-11T10:56:56.454564Z",
+     "iopub.status.busy": "2025-06-11T10:56:56.454462Z",
+     "iopub.status.idle": "2025-06-11T10:56:56.649401Z",
+     "shell.execute_reply": "2025-06-11T10:56:56.649184Z"
     }
    },
    "outputs": [],
@@ -72,13 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-05-29T14:30:35.654108Z",
-     "iopub.status.busy": "2025-05-29T14:30:35.653985Z",
-     "iopub.status.idle": "2025-05-29T14:30:35.665150Z",
-     "shell.execute_reply": "2025-05-29T14:30:35.664943Z"
+     "iopub.execute_input": "2025-06-11T10:56:56.665552Z",
+     "iopub.status.busy": "2025-06-11T10:56:56.665431Z",
+     "iopub.status.idle": "2025-06-11T10:56:56.677540Z",
+     "shell.execute_reply": "2025-06-11T10:56:56.677296Z"
     }
    },
    "outputs": [],
@@ -102,13 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-05-29T14:30:35.666291Z",
-     "iopub.status.busy": "2025-05-29T14:30:35.666219Z",
-     "iopub.status.idle": "2025-05-29T14:30:35.724974Z",
-     "shell.execute_reply": "2025-05-29T14:30:35.724731Z"
+     "iopub.execute_input": "2025-06-11T10:56:56.678700Z",
+     "iopub.status.busy": "2025-06-11T10:56:56.678634Z",
+     "iopub.status.idle": "2025-06-11T10:56:56.738939Z",
+     "shell.execute_reply": "2025-06-11T10:56:56.738678Z"
     }
    },
    "outputs": [],
@@ -141,10 +141,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-05-29T14:30:35.726143Z",
-     "iopub.status.busy": "2025-05-29T14:30:35.726068Z",
-     "iopub.status.idle": "2025-05-29T14:30:35.737823Z",
-     "shell.execute_reply": "2025-05-29T14:30:35.737606Z"
+     "iopub.execute_input": "2025-06-11T10:56:56.740131Z",
+     "iopub.status.busy": "2025-06-11T10:56:56.740055Z",
+     "iopub.status.idle": "2025-06-11T10:56:56.750913Z",
+     "shell.execute_reply": "2025-06-11T10:56:56.750731Z"
     }
    },
    "outputs": [],
@@ -167,7 +167,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-11T10:56:56.751844Z",
+     "iopub.status.busy": "2025-06-11T10:56:56.751781Z",
+     "iopub.status.idle": "2025-06-11T10:56:56.861251Z",
+     "shell.execute_reply": "2025-06-11T10:56:56.861048Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig = plot_comparison(\n",
