--- a/docs/examples/cst-mimo.ipynb
+++ b/docs/examples/cst-mimo.ipynb
@@ -11,13 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:37.654415Z",
-     "iopub.status.busy": "2025-03-20T08:26:37.654090Z",
-     "iopub.status.idle": "2025-03-20T08:26:40.217877Z",
-     "shell.execute_reply": "2025-03-20T08:26:40.217469Z"
+     "iopub.execute_input": "2025-06-11T10:56:44.557784Z",
+     "iopub.status.busy": "2025-06-11T10:56:44.557440Z",
+     "iopub.status.idle": "2025-06-11T10:56:45.216384Z",
+     "shell.execute_reply": "2025-06-11T10:56:45.216160Z"
     }
    },
    "outputs": [],
@@ -41,13 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:40.219293Z",
-     "iopub.status.busy": "2025-03-20T08:26:40.218972Z",
-     "iopub.status.idle": "2025-03-20T08:26:40.221594Z",
-     "shell.execute_reply": "2025-03-20T08:26:40.221328Z"
+     "iopub.execute_input": "2025-06-11T10:56:45.217591Z",
+     "iopub.status.busy": "2025-06-11T10:56:45.217491Z",
+     "iopub.status.idle": "2025-06-11T10:56:45.226802Z",
+     "shell.execute_reply": "2025-06-11T10:56:45.226609Z"
     }
    },
    "outputs": [],
@@ -84,13 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:40.225182Z",
-     "iopub.status.busy": "2025-03-20T08:26:40.225115Z",
-     "iopub.status.idle": "2025-03-20T08:26:40.227553Z",
-     "shell.execute_reply": "2025-03-20T08:26:40.227347Z"
+     "iopub.execute_input": "2025-06-11T10:56:45.227985Z",
+     "iopub.status.busy": "2025-06-11T10:56:45.227905Z",
+     "iopub.status.idle": "2025-06-11T10:56:45.236217Z",
+     "shell.execute_reply": "2025-06-11T10:56:45.235954Z"
     }
    },
    "outputs": [],
@@ -113,13 +113,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:40.228218Z",
-     "iopub.status.busy": "2025-03-20T08:26:40.228149Z",
-     "iopub.status.idle": "2025-03-20T08:26:40.230612Z",
-     "shell.execute_reply": "2025-03-20T08:26:40.230392Z"
+     "iopub.execute_input": "2025-06-11T10:56:45.237294Z",
+     "iopub.status.busy": "2025-06-11T10:56:45.237238Z",
+     "iopub.status.idle": "2025-06-11T10:56:45.245106Z",
+     "shell.execute_reply": "2025-06-11T10:56:45.244885Z"
     }
    },
    "outputs": [],
@@ -136,13 +136,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:40.234074Z",
-     "iopub.status.busy": "2025-03-20T08:26:40.233994Z",
-     "iopub.status.idle": "2025-03-20T08:26:40.236571Z",
-     "shell.execute_reply": "2025-03-20T08:26:40.236350Z"
+     "iopub.execute_input": "2025-06-11T10:56:45.246064Z",
+     "iopub.status.busy": "2025-06-11T10:56:45.246011Z",
+     "iopub.status.idle": "2025-06-11T10:56:45.254004Z",
+     "shell.execute_reply": "2025-06-11T10:56:45.253778Z"
     }
    },
    "outputs": [],
@@ -161,8 +161,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-11T10:56:45.254969Z",
+     "iopub.status.busy": "2025-06-11T10:56:45.254908Z",
+     "iopub.status.idle": "2025-06-11T10:56:45.264580Z",
+     "shell.execute_reply": "2025-06-11T10:56:45.264349Z"
+    }
+   },
    "outputs": [],
    "source": [
     "prob_switch = 0.05\n",
@@ -196,13 +203,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:40.244377Z",
-     "iopub.status.busy": "2025-03-20T08:26:40.244311Z",
-     "iopub.status.idle": "2025-03-20T08:26:40.249681Z",
-     "shell.execute_reply": "2025-03-20T08:26:40.249393Z"
+     "iopub.execute_input": "2025-06-11T10:56:45.265578Z",
+     "iopub.status.busy": "2025-06-11T10:56:45.265519Z",
+     "iopub.status.idle": "2025-06-11T10:56:45.275183Z",
+     "shell.execute_reply": "2025-06-11T10:56:45.274954Z"
     }
    },
    "outputs": [],
@@ -225,8 +232,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-11T10:56:45.276135Z",
+     "iopub.status.busy": "2025-06-11T10:56:45.276081Z",
+     "iopub.status.idle": "2025-06-11T10:56:45.285997Z",
+     "shell.execute_reply": "2025-06-11T10:56:45.285763Z"
+    }
+   },
    "outputs": [],
    "source": [
     "class ContinuousStirredTankReactor:\n",
@@ -337,13 +351,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:40.254382Z",
-     "iopub.status.busy": "2025-03-20T08:26:40.254310Z",
-     "iopub.status.idle": "2025-03-20T08:26:40.314806Z",
-     "shell.execute_reply": "2025-03-20T08:26:40.314446Z"
+     "iopub.execute_input": "2025-06-11T10:56:45.286910Z",
+     "iopub.status.busy": "2025-06-11T10:56:45.286858Z",
+     "iopub.status.idle": "2025-06-11T10:56:45.306499Z",
+     "shell.execute_reply": "2025-06-11T10:56:45.306264Z"
     }
    },
    "outputs": [],
@@ -361,13 +375,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:40.315808Z",
-     "iopub.status.busy": "2025-03-20T08:26:40.315729Z",
-     "iopub.status.idle": "2025-03-20T08:26:40.318631Z",
-     "shell.execute_reply": "2025-03-20T08:26:40.318405Z"
+     "iopub.execute_input": "2025-06-11T10:56:45.307388Z",
+     "iopub.status.busy": "2025-06-11T10:56:45.307338Z",
+     "iopub.status.idle": "2025-06-11T10:56:45.315798Z",
+     "shell.execute_reply": "2025-06-11T10:56:45.315553Z"
     }
    },
    "outputs": [],
@@ -386,13 +400,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:40.322207Z",
-     "iopub.status.busy": "2025-03-20T08:26:40.322145Z",
-     "iopub.status.idle": "2025-03-20T08:26:40.324536Z",
-     "shell.execute_reply": "2025-03-20T08:26:40.324336Z"
+     "iopub.execute_input": "2025-06-11T10:56:45.316832Z",
+     "iopub.status.busy": "2025-06-11T10:56:45.316764Z",
+     "iopub.status.idle": "2025-06-11T10:56:45.325563Z",
+     "shell.execute_reply": "2025-06-11T10:56:45.325395Z"
     }
    },
    "outputs": [],
@@ -413,10 +427,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:40.328172Z",
-     "iopub.status.busy": "2025-03-20T08:26:40.328109Z",
-     "iopub.status.idle": "2025-03-20T08:26:52.881723Z",
-     "shell.execute_reply": "2025-03-20T08:26:52.881316Z"
+     "iopub.execute_input": "2025-06-11T10:56:45.326464Z",
+     "iopub.status.busy": "2025-06-11T10:56:45.326407Z",
+     "iopub.status.idle": "2025-06-11T10:56:49.887320Z",
+     "shell.execute_reply": "2025-06-11T10:56:49.887043Z"
     }
    },
    "outputs": [],
@@ -481,7 +495,7 @@
     "Ys = {\"Original\": Y}\n",
     "for model in models:\n",
     "    model.fit(U, Y)\n",
-    "    Ys[model.steps[1][1].regressor.__class__.__name__] = model.predict(U)"
+    "    Ys[model.steps[1][1].regressor_.__class__.__name__] = model.predict(U)"
    ]
   },
   {
@@ -503,10 +517,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:53.138173Z",
-     "iopub.status.busy": "2025-03-20T08:26:53.138102Z",
-     "iopub.status.idle": "2025-03-20T08:26:53.267577Z",
-     "shell.execute_reply": "2025-03-20T08:26:53.267294Z"
+     "iopub.execute_input": "2025-06-11T10:56:49.888659Z",
+     "iopub.status.busy": "2025-06-11T10:56:49.888583Z",
+     "iopub.status.idle": "2025-06-11T10:56:50.016371Z",
+     "shell.execute_reply": "2025-06-11T10:56:50.016155Z"
     }
    },
    "outputs": [],
@@ -535,10 +549,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:53.268369Z",
-     "iopub.status.busy": "2025-03-20T08:26:53.268291Z",
-     "iopub.status.idle": "2025-03-20T08:26:53.352729Z",
-     "shell.execute_reply": "2025-03-20T08:26:53.352445Z"
+     "iopub.execute_input": "2025-06-11T10:56:50.028088Z",
+     "iopub.status.busy": "2025-06-11T10:56:50.027983Z",
+     "iopub.status.idle": "2025-06-11T10:56:50.105296Z",
+     "shell.execute_reply": "2025-06-11T10:56:50.105097Z"
     }
    },
    "outputs": [],
@@ -560,13 +574,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:53.353507Z",
-     "iopub.status.busy": "2025-03-20T08:26:53.353427Z",
-     "iopub.status.idle": "2025-03-20T08:26:53.355474Z",
-     "shell.execute_reply": "2025-03-20T08:26:53.355262Z"
+     "iopub.execute_input": "2025-06-11T10:56:50.106357Z",
+     "iopub.status.busy": "2025-06-11T10:56:50.106285Z",
+     "iopub.status.idle": "2025-06-11T10:56:50.115811Z",
+     "shell.execute_reply": "2025-06-11T10:56:50.115632Z"
     }
    },
    "outputs": [],
@@ -584,13 +598,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:53.356109Z",
-     "iopub.status.busy": "2025-03-20T08:26:53.356038Z",
-     "iopub.status.idle": "2025-03-20T08:26:53.362594Z",
-     "shell.execute_reply": "2025-03-20T08:26:53.362388Z"
+     "iopub.execute_input": "2025-06-11T10:56:50.116759Z",
+     "iopub.status.busy": "2025-06-11T10:56:50.116702Z",
+     "iopub.status.idle": "2025-06-11T10:56:50.126204Z",
+     "shell.execute_reply": "2025-06-11T10:56:50.125978Z"
     }
    },
    "outputs": [],
@@ -613,13 +627,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:53.363273Z",
-     "iopub.status.busy": "2025-03-20T08:26:53.363192Z",
-     "iopub.status.idle": "2025-03-20T08:26:53.367440Z",
-     "shell.execute_reply": "2025-03-20T08:26:53.367228Z"
+     "iopub.execute_input": "2025-06-11T10:56:50.127162Z",
+     "iopub.status.busy": "2025-06-11T10:56:50.127108Z",
+     "iopub.status.idle": "2025-06-11T10:56:50.136914Z",
+     "shell.execute_reply": "2025-06-11T10:56:50.136687Z"
     }
    },
    "outputs": [],
@@ -642,13 +656,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:53.371116Z",
-     "iopub.status.busy": "2025-03-20T08:26:53.371050Z",
-     "iopub.status.idle": "2025-03-20T08:26:53.430569Z",
-     "shell.execute_reply": "2025-03-20T08:26:53.430328Z"
+     "iopub.execute_input": "2025-06-11T10:56:50.137795Z",
+     "iopub.status.busy": "2025-06-11T10:56:50.137741Z",
+     "iopub.status.idle": "2025-06-11T10:56:50.158288Z",
+     "shell.execute_reply": "2025-06-11T10:56:50.158064Z"
     }
    },
    "outputs": [],
@@ -666,13 +680,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:53.431219Z",
-     "iopub.status.busy": "2025-03-20T08:26:53.431151Z",
-     "iopub.status.idle": "2025-03-20T08:26:53.433533Z",
-     "shell.execute_reply": "2025-03-20T08:26:53.433311Z"
+     "iopub.execute_input": "2025-06-11T10:56:50.159134Z",
+     "iopub.status.busy": "2025-06-11T10:56:50.159084Z",
+     "iopub.status.idle": "2025-06-11T10:56:50.166704Z",
+     "shell.execute_reply": "2025-06-11T10:56:50.166486Z"
     }
    },
    "outputs": [],
@@ -687,17 +701,17 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:53.437229Z",
-     "iopub.status.busy": "2025-03-20T08:26:53.437159Z",
-     "iopub.status.idle": "2025-03-20T08:26:53.764634Z",
-     "shell.execute_reply": "2025-03-20T08:26:53.764298Z"
+     "iopub.execute_input": "2025-06-11T10:56:50.167565Z",
+     "iopub.status.busy": "2025-06-11T10:56:50.167514Z",
+     "iopub.status.idle": "2025-06-11T10:56:50.278200Z",
+     "shell.execute_reply": "2025-06-11T10:56:50.278009Z"
     }
    },
    "outputs": [],
    "source": [
     "Ys_val = {\"Original\": Y_val}\n",
     "for model in models:\n",
-    "    Ys_val[model.steps[1][1].regressor.__class__.__name__] = model.predict(\n",
+    "    Ys_val[model.steps[1][1].regressor_.__class__.__name__] = model.predict(\n",
     "        U_val\n",
     "    )"
    ]
@@ -714,10 +728,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:53.765588Z",
-     "iopub.status.busy": "2025-03-20T08:26:53.765504Z",
-     "iopub.status.idle": "2025-03-20T08:26:53.898433Z",
-     "shell.execute_reply": "2025-03-20T08:26:53.898153Z"
+     "iopub.execute_input": "2025-06-11T10:56:50.279180Z",
+     "iopub.status.busy": "2025-06-11T10:56:50.279119Z",
+     "iopub.status.idle": "2025-06-11T10:56:50.361007Z",
+     "shell.execute_reply": "2025-06-11T10:56:50.360818Z"
     }
    },
    "outputs": [],
@@ -739,10 +753,10 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-20T08:26:53.899212Z",
-     "iopub.status.busy": "2025-03-20T08:26:53.899131Z",
-     "iopub.status.idle": "2025-03-20T08:26:53.982576Z",
-     "shell.execute_reply": "2025-03-20T08:26:53.982320Z"
+     "iopub.execute_input": "2025-06-11T10:56:50.361971Z",
+     "iopub.status.busy": "2025-06-11T10:56:50.361909Z",
+     "iopub.status.idle": "2025-06-11T10:56:50.429156Z",
+     "shell.execute_reply": "2025-06-11T10:56:50.428964Z"
     }
    },
    "outputs": [],
