test(examples): add more methods to rls and opt examples

--- a/docs/examples/rls.ipynb
+++ b/docs/examples/rls.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-06-11T10:56:55.797743Z",
@@ -26,7 +26,7 @@
     "from sklearn.pipeline import Pipeline\n",
     "\n",
     "from sippy_unipi.datasets import load_sample_siso\n",
-    "from sippy_unipi.io import ARARMAX, ARARX, ARMA, BJ, GEN, OE\n",
+    "from sippy_unipi.io import ARARMAX, ARARX, ARMA, ARMAX, ARX, BJ, FIR, GEN, OE\n",
     "from sippy_unipi.plot import (\n",
     "    plot_comparison,\n",
     "    plot_responses,\n",
@@ -34,7 +34,6 @@
     "from sippy_unipi.preprocessing import StandardScaler\n",
     "\n",
     "np.random.seed(0)\n",
-    "ylegends = [\"System\", \"ARMA\", \"ARARX\", \"ARARMAX\", \"OE\", \"BJ\", \"GEN\"]\n",
     "\n",
     "# Enable automatic reloading of modules when they change\n",
     "%load_ext autoreload\n",
@@ -72,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-06-11T10:56:56.665552Z",
@@ -91,18 +90,23 @@
     "theta = 11\n",
     "kwargs = dict(stab_cons=False, method=\"rlls\")\n",
     "models = [\n",
-    "    ARMA(na, nc, theta, **kwargs),\n",
+    "    # FIR(nb, theta, **kwargs),\n",
+    "    ARX(na, nb, theta, **kwargs),\n",
+    "    # ARMA(na, nc, theta, **kwargs),\n",
+    "    ARMAX(na, nb, nc, theta, **kwargs),\n",
     "    ARARX(na, nb, nd, theta, **kwargs),\n",
     "    ARARMAX(na, nb, nc, nd, theta, **kwargs),\n",
     "    OE(nb, nf, theta, **kwargs),\n",
     "    BJ(nb, nc, nd, nf, theta, **kwargs),\n",
     "    GEN(na, nb, nc, nd, nf, theta, **kwargs),\n",
-    "]"
+    "]\n",
+    "\n",
+    "ylegends = [\"System\"] + [model.__class__.__name__ for model in models]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-06-11T10:56:56.678700Z",
@@ -155,12 +159,12 @@
     "print(f\"{'Model':<20} {'RMSE':<10} {'Explained Variance':<20}\")\n",
     "print(\"-\" * 50)\n",
     "\n",
-    "for i, model_name in enumerate(ylegends):\n",
-    "    if i == 0:  # Skip the first one which is the actual data\n",
-    "        continue\n",
-    "    rmse_value = scores[\"rmse\"][i - 1]\n",
-    "    ev_value = scores[\"ev\"][i - 1]\n",
-    "    print(f\"{model_name:<20} {rmse_value:<10.4f} {ev_value:<20.4f}\")\n",
+    "for i, model in enumerate(models):\n",
+    "    rmse_value = scores[\"rmse\"][i]\n",
+    "    ev_value = scores[\"ev\"][i]\n",
+    "    print(\n",
+    "        f\"{model.__class__.__name__:<20} {rmse_value:<10.4f} {ev_value:<20.4f}\"\n",
+    "    )\n",
     "print(\"-\" * 50)\n"
    ]
   },
